install( FILES korganizer_configmain.desktop
               korganizer_configtime.desktop
               korganizer_configviews.desktop
               korganizer_configcolorsandfonts.desktop
               korganizer_configplugins.desktop
               korganizer_configgroupscheduling.desktop
               korganizer_configfreebusy.desktop
               korganizer_configdesignerfields.desktop
               DESTINATION ${SERVICES_INSTALL_DIR})

