
picsdir = $(kde_datadir)/korganizer/pics
toolbardir = $(kde_datadir)/korganizer/toolbar

pics_DATA = smallcal.xpm 1downarrow.xpm 1leftarrow.xpm 1rightarrow.xpm \
	1uparrow.xpm 2downarrow.xpm 2leftarrow.xpm 2rightarrow.xpm \
	2uparrow.xpm 3downarrow.xpm 3leftarrow.xpm 3rightarrow.xpm \
	3uparrow.xpm checkmark.xpm checkedbox-mask.xpm checkedbox.xpm \
	emptybox-mask.xpm emptybox.xpm bell.xpm recur.xpm \
	runprog.xpm playsound.xpm knlogo1.gif smallclock.xpm mailappt.xpm \
	nomailappt.xpm readonlyevent.xpm

toolbar_DATA = listicon.xpm 5dayicon.xpm  dayicon.xpm agenda.xpm \
	weekicon.xpm todayicon.xpm newevent.xpm newrecurevent.xpm \
	delete.xpm monthicon.xpm search.xpm checkedclipboard.xpm \
	send.xpm findf.xpm todolist.xpm

EXTRA_DIST = dayview.xpm   inverse_recur.xpm alarmd.xpm alarmd-disabled.xpm

KDE_ICON = korganizer

mini_DATA = alarmd.xpm alarmd-disabled.xpm
minidir = $(kde_icondir)/mini

