
picsdir = $(kde_datadir)/korganizer/pics
toolbardir = $(kde_datadir)/korganizer/toolbar

pics_DATA = smallcal.png 1downarrow.png 1leftarrow.png 1rightarrow.png \
	1uparrow.png 2downarrow.png 2leftarrow.png 2rightarrow.png \
	2uparrow.png 3downarrow.png 3leftarrow.png 3rightarrow.png \
	3uparrow.png checkmark.png checkedbox-mask.png checkedbox.png \
	emptybox-mask.png emptybox.png bell.png recur.png \
	runprog.png playsound.png knlogo1.gif smallclock.png mailappt.png \
	nomailappt.png readonlyevent.png alarmd.png alarmd-disabled.png

toolbar_DATA = listicon.png 5dayicon.png  dayicon.png agenda.png \
	weekicon.png todayicon.png newevent.png newrecurevent.png \
	delete.png monthicon.png search.png checkedclipboard.png \
	send.png findf.png todolist.png

EXTRA_DIST = dayview.png   inverse_recur.png alarmd.png alarmd-disabled.png

KDE_ICON = korganizer

