



########### install files ###############

install( FILES alert.wav icemag.wav lightmag.wav onscreen.wav  	spinout.wav  DESTINATION ${DATA_INSTALL_DIR}/korganizer/sounds)




#original Makefile.am contents follow:

#
#soundsdir = $(kde_datadir)/korganizer/sounds
#
#sounds_DATA = alert.wav icemag.wav lightmag.wav onscreen.wav \
#	spinout.wav
#
#
